--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,8 @@ ul{
 
     
 .mobile-photo{
-size: 130 180 ;
+width: 130px; 
+height: 130px;
 }
 
 .team{
@@ -192,6 +193,28 @@ size: 130 180 ;
     background-color: #96E7C0;
     border: 1px solid #FFFFFF;
     border-radius: 50%;
-    display: flex;
+    
     
 }
+ .container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+
+ }
+
+
+
+ .send-button{
+    width: 100px;
+    height: 34px;
+    border: 1px solid #69C69A;
+    color: #69C69A;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 20px;
+   
+  
+ }
+
+
