--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,16 @@ header{
     margin: 16px 28px;
     align-items: center;
 }
+
+.button{
+    width: 100px;
+    height: 30px;
+    border: 1px solid #fafafa;
+    border-radius: 20px;
+    background-color: #69C69A;
+    color: #FFFFFF;
+    margin-top: 30px;
+}
 .nav-list{
     display: flex;
 }
@@ -30,13 +40,28 @@ header{
     color: black;
 }
 
+.clients-remember{
+    margin-top: 5px;
+}
+
 .section-1{
     background-image: url('/images/gren1.svg');
     height: 238px;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    color: #FFFFFF;
+    /* margin-right: 20px; */
 }
+.section-1-text{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
+}
+
 
 .clients{
     height: 185px;
