--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
-/* rogor gavaketo ise rom ekranis zomis gadidebisas ar gaiwelos? */
+
 *{
     font-family: 'Inter 28pt';
     font-weight: 400;
     font-style: Regular;
     line-height: 100%;
     letter-spacing: 0%;
+    
 }
+ 
 .logo{
     font-size: 12px;
     display: inline-block;
@@ -15,13 +17,18 @@
 }
 .nav-item{
     font-size: 8px;
+    float: right;
+    ;
 }
 header{
     display: flex;
     justify-content: space-between;
     margin: 16px 28px;
-    align-items: center;
+   align-items: center;
+   
 }
+
+
 
 .button{
     width: 100px;
@@ -191,6 +198,7 @@ ul{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    
 }
 .first-container{
     display: flex;
@@ -407,3 +415,9 @@ height: 180px;
     }
 
 
+
+    .footer-bottom {
+        background-color: #262626C2;
+        width: 100%;
+        height: 56px;
+    }
