--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,36 @@ header{
    
 }
 
+.top-nav{
+    display: flex;
+    justify-content:right;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    overflow: hidden;
+}
+.top-nav > ul>li:hover{
+    cursor: pointer;
+    background-color: #69C69A;
+    color: white;
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    justify-content: center;
+
+}
+.icon1{
+    color: #262626C2 ;
+    float: right;
+
+}
+/* .icon1 :hover{
+   cursor: pointer;
+    background-color: #69C69A;
+    color: white; 
+
+}  amas rom vwer yvelaferi ireva   */
+
 
 
 .button{
@@ -384,6 +414,7 @@ height: 180px;
     .contact-form{
         width: 100px;
         height: 34px;
+        flex-wrap: nowrap;
     }
 
  
