--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
-
+/* 1. make website responsive
+   2. center elements in selected clients
+    3. fix the services section
+    4. improve the footer layout
+    5. add hover effects to buttons
+    6. center navigation items while hovering
+    7. 
+*/
 *{
-    font-family: 'Inter 28pt';
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
-    font-style: Regular;
+    font-style: normal;
     line-height: 100%;
     letter-spacing: 0%;
     
@@ -17,8 +24,12 @@
 }
 .nav-item{
     font-size: 8px;
-    float: right;
-    ;
+    /*  */
+    font-size: 12px;
+  margin: 0 10px;
+  text-decoration: none;
+  color: black;
+    
 }
 header{
     display: flex;
@@ -34,13 +45,13 @@ header{
     align-items: center;
     width: 100%;
     height: 40px;
-    overflow: hidden;
+    overflow: hidden; 
 }
 .top-nav > ul>li:hover{
     cursor: pointer;
     background-color: #69C69A;
     color: white;
-    width: 50px;
+    width: 60px;
     height: 30px;
     text-align: center;
     justify-content: center;
@@ -51,12 +62,12 @@ header{
     float: right;
 
 }
-/* .icon1 :hover{
+.icon1:hover{
    cursor: pointer;
     background-color: #69C69A;
     color: white; 
 
-}  amas rom vwer yvelaferi ireva   */
+} 
 
 
 
@@ -101,7 +112,9 @@ header{
 
 
 .clients{
-    height: 185px;
+   
+    height: 300px;
+    align-items: center;
     background-image: url(/images/map.jpg);
     display: flex;
     flex-direction: column;
@@ -118,8 +131,7 @@ header{
 .clients-header{
     margin-top: 19px;
     margin-bottom: 34px;
-    font-weight: 700;
-    font-style: Bold;
+    font-weight: bold;
     font-size: 16px;
     line-height: 100%;
     letter-spacing: 0%;
@@ -177,7 +189,7 @@ header{
     
 }
 .service-text{
-    font-size: 9px;
+    font-size:14px;
     width: 70%;
     margin: 2%;
     line-height: 100%;
@@ -194,7 +206,7 @@ header{
     height: 31px;
     border: 1px solid #FFFFFF;
     color: #FFFFFF;
-    font-size: 9px;
+    font-size:14px;
     justify-content: center;
     align-items: center;
     margin-bottom: 13px;
@@ -202,7 +214,7 @@ header{
 ul{
     font-weight: 700;
     font-style: Bold;
-    font-size: 7px;
+    font-size: 12px;
     /* line-height: 100%; */
     letter-spacing: 0%;
     color: #FFFFFF; 
@@ -220,7 +232,13 @@ ul{
 .portfolio-text{
     text-align: center;
     font-weight: bold;
-    font-size: 9px;
+    font-size: 14px;
+    margin: 2%;
+    line-height: 100%;
+    letter-spacing: 0%;
+     margin-left: auto;
+    margin-right: auto;
+    width: 70%;
 }
 
 .portfolio-containers{
@@ -393,29 +411,37 @@ height: 180px;
  .contact-text {
     text-align: center;
     font-weight: 700;
-    font-size: 9px;
+    font-size: 14px;
     margin-top: 10px;
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
+    line-height: 100%;
+    letter-spacing: 0%; 
+
  }
 
-
+/* text-align: center;
+    font-weight: bold;
+    font-size: 14px;
+    margin: 2%;
+    line-height: 100%;
+    letter-spacing: 0%; */
 
     .contact-form {
         display: inline;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 70%;
         margin-left: 30px;
         margin-top: 40px;
+        flex-wrap: nowrap;
+        gap: 10px;
         
     }
-    .contact-form{
-        width: 100px;
-        height: 34px;
-        flex-wrap: nowrap;
-    }
+    
 
  
  .send-button{
